# systemy-operacyjne-2020-2021

./: README.md  tmpzad3
kolokwium1/: 1  1.c  1empty  1empty.c  2  2.c  3  3empty.c  4  4.c  5.c  6  6.c
lab1/NowakAdam/cw01/zad1/: CMakeLists.txt  zad1.c
lab1/NowakAdam/cw01/zad2/: CMakeLists.txt  raport2.txt  zad2.c
lab1/NowakAdam/cw01/zad3a/: CMakeLists.txt  mergeFilesLib.h  results3a.txt  zad3a.c  zad3a_dynamic.c
lab1/NowakAdam/cw01/zad3b/: CMakeLists.txt  results3b.txt  zad3b.c
lab2 py/: file1.txt  generateLinesToBreak.py  generateNumbers.py  generateText.py  generateWithPattern.py  generatezad1.py  generatezad2.py  zad1atest.txt  zad1btest.txt  zad3test.txt  zad5test.txt
lab2/NowakAdam/cw02/zad1/: Makefile  raport_zad_1.txt  zad1  zad1.c
lab2/NowakAdam/cw02/zad2/: Makefile  pomiar_zad_2.txt  zad2  zad2.c
lab2/NowakAdam/cw02/zad3/: Makefile  a.txt  b.txt  c.txt  pomiar_zad_3.txt  zad3  zad3.c
lab2/NowakAdam/cw02/zad4/: Makefile  file1.txt  pomiar_zad_4.txt  zad4  zad4.c  zad4testshort.txt
lab2/NowakAdam/cw02/zad5/: Makefile  dest.txt  pomiar_zad_5.txt  zad5  zad5.c
lab3/NowakAdam/cw03/zad1/: Makefile  zad1.c
lab3/NowakAdam/cw03/zad2/: Makefile  mergeFilesLib.c  mergeFilesLib.h  raport_zad2.txt  test1_bmed.txt  zad2.c
lab3/NowakAdam/cw03/zad3/: Makefile  zad3.c
lab4/NowakAdam/cw04/zad1/: Makefile  child  child.c  zad1  zad1.c
lab4/NowakAdam/cw04/zad2/: Makefile  zad2  zad2.c
lab4/NowakAdam/cw04/zad3/zad3a/: Makefile  catcher  catcher.c  sender  sender.c
lab4/NowakAdam/cw04/zad3/zad3b/: Makefile  catcher  catcher.c  sender  sender.c  wrapper  wrapper.c
lab4/NowakAdam/cw04/zad3a/: Makefile  catcher.c  sender.c  wrapper.c
lab4/NowakAdam/cw04/zad3b/: Makefile  catcher.c  sender.c
lab5/NowakAdam/cw05/zad1/: Makefile  input.txt  zad1.c
lab5/NowakAdam/cw05/zad2/: Makefile  mailer.c
lab5/NowakAdam/cw05/zad3/: Makefile  consumer.c  consumerFile.txt  producer.c  producer0.txt  producer2.txt  runTests.py  wnioski.txt  wrapper.c
lab6/NowakAdam/cw06/: test  test.c
lab6/NowakAdam/cw06/zad1/: Makefile  commonData.c  commonData.h  klient  klient.c  serwer  serwer.c
lab7/NowakAdam/cw01/: wnioski.txt
lab7/NowakAdam/cw01/zad1/: Makefile  commonData.h  cook.c  deliverer.c  restaurant.c
lab7/NowakAdam/cw01/zad2/: Makefile  commonData.h  cook.c  deliverer.c  restaurant.c
lab8/zad1/: Makefile  body1.ascii.pgm  main  main.c  out.ascii.pgm
lab9/NowakAdam/cw09/zad1/: Makefile  main  main.c  main2  main2.c
pyLab1/: createFiles.py  test1Args.txt
pyLab1/przykladyTxt/: test1_ashort.txt  test2_blong.txt  test2_bmed.txt  test2_bshort.txt  test3_along.txt  test3_blong.txt  test3_bmed.txt  test3_bshort.txt
test/: countTo10.c  countToN.c  counter.h  main.c  testArgs
tmpLab1/: CMakeLists.txt  main.c  mergeFilesLib.c  mergeFilesLib.h
tmpLab1/lab1/NowakAdam/cw01/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.c  tmpFile.txt
tmpLab1/lab1/NowakAdam/cw01/zad3a/: mergeFilesLib.c
tmpLab1/lab1/NowakAdam/cw01/zad3b/: zad3b_dynamic.c
tmpLab1/makei/: makefile
tmpLab1/tmpzad3ab/: mergeFilesLibb.c
